# dune-sync

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.dev  Makefile  README.md  config-with-params.toml  config.toml  config.yaml  coverage.xml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  sample-config.yaml
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/workflows/: coverage.yaml  deploy.yaml  e2e-test.yaml  pull-request.yaml
grafana/data/: grafana.db
prometheus/: config.yml
requirements/: dev.txt  prod.txt
src/: .config.py.swp  __init__.py  args.py  config.py  env.py  etl.py  interfaces.py  job.py  jobs.py  logger.py  main.py  mappings.py  metrics.py  recipe.py  sync.py  sync_types.py  types.py
src/destinations/: common.py  dune.py  postgres.py
src/dune_to_local/: main.py  postgres.py
src/local_to_dune/: postgres.py
src/pipelines/: dune_to_pg.py
src/sources/: dune.py  postgres.py  type_maps.py
tests/: __init__.py  db_util.py  e2e.py  e2e_test.py
tests/fixtures/: basic.config.yaml  buggy.config.yaml  dune_to_postgres.config.yaml  foo.sql  postgres_to_dune.config.toml  postgres_to_dune.config.yaml  simple_dune_upload.csv  unknown.config.yaml
tests/fixtures/config/: basic.yaml  basic_with_env_missing_vars.yaml  basic_with_env_placeholders.yaml  buggy.yaml  dune_to_postgres.yaml  invalid_names.yaml  invalid_request_timeout.yaml  invalid_sql_file.yaml  no_data_sources.yaml  postgres_to_dune.yaml  sql-file.config.yaml  sql_file.yaml  unknown.yaml  unknown_dest.yaml  unknown_src.yaml  unsupported_dest.yaml  unsupported_source.yaml
tests/unit/: args_test.py  config_test.py  destinations_test.py  dune_test.py  job_test.py  metrics_test.py  sources_test.py
